log
Thu 09 Mar 2023 03:41:47 PM UTC: 
 tests:  0|7
total_score: 0/70
9dd0fea
Thu 09 Mar 2023 03:53:00 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:12: error: expected expression before ‘;’ token
   18 |   subA = a*;
      |            ^
exercises.c:19:12: error: expected expression before ‘;’ token
   19 |   subB = b*;
      |            ^
exercises.c:20:5: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   20 |   a = subB;
      |     ^
exercises.c:21:5: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   21 |   b = subA;
      |     ^
cc1: all warnings being treated as errors
Compilation failed
58d6b88
Thu 09 Mar 2023 03:53:17 PM UTC: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:3: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘subA’
   18 |   subA = a*
      |   ^~~~
test.c:251:5: error: ‘main’ is normally a non-static function [-Werror=main]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
  271 | }
      | ^
In file included from test.c:5:
exercises.c:17:7: error: unused variable ‘subA’ [-Werror=unused-variable]
   17 |   int subA, subB
      |       ^~~~
At top level:
test.c:251:5: error: ‘main’ defined but not used [-Werror=unused-function]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
c7210a2
Thu 09 Mar 2023 03:53:33 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:3: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘subA’
   18 |   subA = a
      |   ^~~~
test.c:251:5: error: ‘main’ is normally a non-static function [-Werror=main]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
  271 | }
      | ^
In file included from test.c:5:
exercises.c:17:7: error: unused variable ‘subA’ [-Werror=unused-variable]
   17 |   int subA, subB
      |       ^~~~
At top level:
test.c:251:5: error: ‘main’ defined but not used [-Werror=unused-function]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
ba11c46
